FIX: align loader to the middle & reset camera setting

--- a/app/assets/stylesheets/components/_loader.scss
+++ b/app/assets/stylesheets/components/_loader.scss
@@ -1,7 +1,7 @@
 .lds-ellipsis {
   display: inline-block;
   position: relative;
-  width: 20px;
+  width: 75px;
   height: 10px;
 }
 
